{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 7,
  "lineage": "e98cbec2-d9df-550a-2176-446f40caea4a",
  "resources": [
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:920804837613:network-acl/acl-0d3111570039cd6f2",
            "default_network_acl_id": "acl-0d3111570039cd6f2",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0d3111570039cd6f2",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "920804837613",
            "subnet_ids": [
              "subnet-0244edffd826ff24e",
              "subnet-0f67734d6da807dc4"
            ],
            "tags": {
              "Name": "globo-dev-default"
            },
            "tags_all": {
              "Name": "globo-dev-default"
            },
            "vpc_id": "vpc-0a8b4ce0df0cda0f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:920804837613:route-table/rtb-023e7e4f7b8ef8593",
            "default_route_table_id": "rtb-023e7e4f7b8ef8593",
            "id": "rtb-023e7e4f7b8ef8593",
            "owner_id": "920804837613",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "globo-dev-default"
            },
            "tags_all": {
              "Name": "globo-dev-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0a8b4ce0df0cda0f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:920804837613:security-group/sg-016cc556e1045dcdf",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-016cc556e1045dcdf",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "920804837613",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "globo-dev-default"
            },
            "tags_all": {
              "Name": "globo-dev-default"
            },
            "vpc_id": "vpc-0a8b4ce0df0cda0f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:920804837613:internet-gateway/igw-0953b7d997a59773e",
            "id": "igw-0953b7d997a59773e",
            "owner_id": "920804837613",
            "tags": {
              "Name": "globo-dev"
            },
            "tags_all": {
              "Name": "globo-dev"
            },
            "vpc_id": "vpc-0a8b4ce0df0cda0f1"
          },
          "dependencies": [
            "module.main.aws_vpc.this",
            "module.main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0953b7d997a59773e",
            "id": "r-rtb-07416df4efa4901161080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07416df4efa490116",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.aws_internet_gateway.this",
            "module.main.aws_route_table.public",
            "module.main.aws_vpc.this",
            "module.main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:920804837613:route-table/rtb-07416df4efa490116",
            "id": "rtb-07416df4efa490116",
            "owner_id": "920804837613",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0953b7d997a59773e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "globo-dev-public"
            },
            "tags_all": {
              "Name": "globo-dev-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8b4ce0df0cda0f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.aws_vpc.this",
            "module.main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f023c2b025828b3",
            "route_table_id": "rtb-07416df4efa490116",
            "subnet_id": "subnet-0f67734d6da807dc4"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.main.aws_route_table.public",
            "module.main.aws_subnet.public",
            "module.main.aws_vpc.this",
            "module.main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c489fc0ef0f42b93",
            "route_table_id": "rtb-07416df4efa490116",
            "subnet_id": "subnet-0244edffd826ff24e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.main.aws_route_table.public",
            "module.main.aws_subnet.public",
            "module.main.aws_vpc.this",
            "module.main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:920804837613:subnet/subnet-0f67734d6da807dc4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.42.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f67734d6da807dc4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "920804837613",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "globo-dev-public-1"
            },
            "tags_all": {
              "Name": "globo-dev-public-1"
            },
            "vpc_id": "vpc-0a8b4ce0df0cda0f1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.main.aws_vpc.this",
            "module.main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:920804837613:subnet/subnet-0244edffd826ff24e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.42.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0244edffd826ff24e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "920804837613",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "globo-dev-public-2"
            },
            "tags_all": {
              "Name": "globo-dev-public-2"
            },
            "vpc_id": "vpc-0a8b4ce0df0cda0f1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.main.aws_vpc.this",
            "module.main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:920804837613:vpc/vpc-0a8b4ce0df0cda0f1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.42.0.0/16",
            "default_network_acl_id": "acl-0d3111570039cd6f2",
            "default_route_table_id": "rtb-023e7e4f7b8ef8593",
            "default_security_group_id": "sg-016cc556e1045dcdf",
            "dhcp_options_id": "dopt-064ea6ba4bcc11061",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a8b4ce0df0cda0f1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-023e7e4f7b8ef8593",
            "owner_id": "920804837613",
            "tags": {
              "Name": "globo-dev"
            },
            "tags_all": {
              "Name": "globo-dev"
            }
          }
        }
      ]
    }
  ]
}